Hardening: Implementation of transactional replay, provider auto-classification, and persistent metrics (Phase 6 V1.1)

--- a/backend/profiles/ypsilon_histo_excel.yaml
+++ b/backend/profiles/ypsilon_histo_excel.yaml
@@ -9,6 +9,7 @@ detection:
   extensions:
     - .xls
     - .xlsx
+  filename_pattern: 'YPSILON'
   required_headers:
     - YPSILON_HISTO
 mapping:
