--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -16,17 +16,17 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install only Runtime dependencies
+# Install only Runtime dependencies + gosu
 RUN apt-get update && apt-get install -y \
     libpq5 \
     curl \
+    gosu \
     && rm -rf /var/lib/apt/lists/*
 
 # Add non-root user
 RUN useradd -m -u 1000 appuser && \
     mkdir -p /app/data && chown -R appuser:appuser /app
 
-USER appuser
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PATH="/home/appuser/.local/bin:${PATH}"
@@ -36,10 +36,14 @@ COPY --from=builder --chown=appuser:appuser /root/.local /home/appuser/.local
 # Copy source code
 COPY --chown=appuser:appuser . .
 
+# Ensure entrypoint is executable
+RUN chmod +x /app/scripts/entrypoint.sh
+
 # Healthcheck
 HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 EXPOSE 8000
 
+ENTRYPOINT ["/app/scripts/entrypoint.sh"]
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
