--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@mui/material-nextjs": "^5.18.0",
         "@mui/x-data-grid": "^6.19.0",
         "clsx": "^2.1.0",
+        "date-fns": "^3.0.0",
         "lucide-react": "^0.309.0",
         "next": "14.1.0",
         "react": "^18",
