fix(validation): mark REPLAY_REQUESTED orphans as SUCCESS/ERROR + add node_modules to .gitignore
SQL: 32 imports set SUCCESS (events_count>0), 217 set ERROR (events_count=0). Result: 51 SUCCESS, 222 ERROR. REPLAY_REQUESTED=0.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ frontend/.next/
 
 # Runtime ingress (local only)
 backend/data/email_ingress/
+
+# Node modules
+node_modules/
+frontend/node_modules/
