feat(v12): phase 1.5 step 2 - ui pagination + import filters + health ingestion + rules monitor fix

--- a/backend/config.yml
+++ b/backend/config.yml
@@ -20,6 +20,9 @@ monitoring:
   ingestion:
     site_code_source: "XLS_ONLY"
     normalize_site_code: true
+    expected_files_per_day:
+      default: 0        # 0 = monitoring désactivé
+      by_provider: {}   # ex: { "YPSILON": 2, "HISTO": 1 }
 
 anti_noise:
   excluded_families: 
