fix(v12): phase 2A hotfix - safe replay replace + remove rule_id fallback + engine_v1 flag + settings typing

--- a/backend/config.yml
+++ b/backend/config.yml
@@ -16,6 +16,8 @@ monitoring:
     raw_code_mode: "IN"       # EXACT | IN
     RULE_MONITORING_HIGH_THRESHOLD: 100
     RULE_MONITORING_LOW_THRESHOLD: 1
+    replay_allow_full_clear: false
+    engine_v1_enabled: true
   replay:
     default_full_history: true
   ui:
